# yavalath-ai-battle

./: pyproject.toml
src/yavalath/: benchmark.py  human_vs_player.py  main.py  renderer.py  replay.py
src/yavalath/core/: board.py  player.py
src/yavalath/players/inoue/: dqn.py  model.pt  player.py  player2.py  train.py
src/yavalath/players/kyawan/: player.py  player2.py
src/yavalath/players/random/: player.py
tests/: test_board.py
