[project]
name = "yavalath-ai-battle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pygame>=2.6.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
