[project]
name = "yavalath-ai-battle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pygame>=2.6.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# isortと、tidy-imports(インポート整理)のルールを有効化
lint.select = ["I", "TID"]

# 自動修正を許可
lint.fixable = ["ALL"]

[tool.ruff.lint.isort]
# 自作パッケージを正しく認識させる
known-first-party = ["yavalath"]

[tool.ruff.lint.flake8-tidy-imports]
# 相対インポートを禁止 (見つけたら絶対インポートに書き換える)
ban-relative-imports = "all"
